--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Benjamin Kakar - Fullstack Backend Developer & Consultant | NNIT Fødevarestyrelsen</title>
+    <meta name="description" content="Benjamin Kakar is an experienced fullstack backend developer and consultant at NNIT, specializing in building robust and scalable backend systems for clients like Fødevarestyrelsen.">
   </head>
   <body>
     <div id="root"></div>
